--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
     margin:0;
     padding:0;
 }
+th{
+    padding: 0.75rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+}
 body {
-    padding-bottom: 40px;
     background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     color:black;
@@ -374,3 +378,32 @@ h2{
     float: left;
     padding: 0px 10px;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+    color:black;
+    position: fixed;
+    width: 100%;
+    height:15%;
+  }
+  
+  li {
+    float: left;
+    padding: 20px 35px;
+  }
+  
+  li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+    color: white;
+  }
